--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
 .App {
   text-align: center;
+  color: white;
+  width: 50%;
+  margin: auto;
+  padding-top: 180px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#title{
+  border: 2px white solid;
+  border-radius: 10px;
+ 
+  padding: 10Px;
+ 
+ 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+  font-size: 3rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h2{
+  font-size: 1.2rem;
+}
+nav ul {
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+padding: 75px 0px;
+
+
+}
+nav ul li {
+  list-style-type: none;
+  width: 10%;
+  border: 2px white solid;
+  border-radius: 10px;
+
+  padding: 10Px;
+
+}
+nav ul li a{
+  text-decoration: none;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  
+}
+
+nav ul li a:visited{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 80%;
+  text-align: center;
+  padding-left: 80px;
+
+}
+footer div i {
+  font-size: 3rem;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#home {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.fab{
+  color: white;
 }
