--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ padding: 75px 0px;
 }
 nav ul li {
   list-style-type: none;
-  width: 10%;
+  width: 75px;
   border: 2px white solid;
   border-radius: 10px;
 
@@ -70,60 +70,59 @@ footer div i {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding-top: 180px; 
-  width: 50%;
-  margin: 0px 400px;
+  padding: 15vh 0;
+  width: 90%;
+  height: 70vh;
+  margin: 0px 5%;
 }
 .fab{
   color: white;
 }
 
-#tab{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin-top: 180px; 
-  width: 50%;
-  background-color: rgba(0, 0, 0, 0.75);
-  margin: auto;
-  border-radius: 10px;
-  border: 2px white solid;
-}
-
 #aboutTab{ 
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  margin: 20px auto; 
-  width: 50%;
+  width: 90%;
+  height: 90vh;
+  margin: 5vh 5%;
+
   background-color: rgba(0, 0, 0, 0.75);
   border-radius: 10px;
   border: 2px white solid;
+ }
+
+#aboutTab p{
+  padding: 10px;
 }
 
 #skillsTab {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  margin: 120px auto; 
-  width: 50%;
+
+   
+  width: 90%;
+  height: 89.5vh;
+  margin: 5vh 5%;
   background-color: rgba(0, 0, 0, 0.75);
   border-radius: 10px;
   border: 2px white solid;
+  
 }
 
 #projectsTab{ 
+  
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  margin: 20px auto; 
-  width: 50%;
+  width: 93%;
+  height: auto;
+  margin: 5% 4%;
   background-color: rgba(0, 0, 0, 0.75);
   border-radius: 10px;
   border: 2px white solid;
+  padding: 10px 0;
 }
 img{
-  width:20%;
+  width: 150px;
   height: auto;
 }
 
@@ -135,9 +134,12 @@ img{
   color: black;
 }
 .main{
-  padding: 10px;
+ height: auto;
 }
 
+.main ul{
+  list-style-type: none;
+}
 .mainSkills{
   padding: 10px;
   display: flex;
@@ -152,7 +154,7 @@ img{
 }
 
 .skill{
-  width: 20%;
+  width: 100px;
   border-radius: 10px;
   border: white 2px solid;
   margin: 10px;
@@ -166,7 +168,7 @@ img{
   justify-content: space-around;
 }
 .html, .react, .redux{
-  width: 28%;
+  width: 30%;
   border-radius: 10px;
   border: white 2px solid;
   margin: 10px;
@@ -177,8 +179,12 @@ img{
   text-align: center;
   padding: 5px;
 }
+.html i, .react i, .redux i{
+  font-size: 2rem;
+}
+
 #projectsTab img {
-  width: 15%;
+  width: 150px;
   height: auto;
 
 }
