--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html{
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
 body {
@@ -23,9 +23,7 @@ code {
 }
 
  #Wrapper{
-  position: fixed;
-  display: block;
-  width: 100%; 
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
- }
+background-color: rgba(0, 0, 0, 0.75);
+width: 100%;
+height: auto;
+}
