--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   color: white;
   display: flex;
  justify-content: center;
-  margin: 0px 0px;
+  padding: 0px 0px;
 
 }
 
@@ -56,7 +56,8 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  width: 100%;
+  width: 75%;
+  margin: auto;
   text-align: center;
   
 
@@ -76,12 +77,13 @@ footer div i {
 #home {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  padding: 15vh 0;
+  justify-content: center;
+  padding: 14.8% 0;
   width: 90%;
   height: auto;
   margin: 0px 5%;
 }
+
 .fab{
   color: white;
 }
@@ -107,9 +109,9 @@ footer div i {
   flex-direction: column;
 
    
-  width: 90%;
+  width: 70%;
   height: auto;
-  margin: 5vh 5%;
+  margin: 5vh auto;
   background-color: rgba(0, 0, 0, 0.75);
   border-radius: 10px;
   border: 2px white solid;
