--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,8 @@ code {
     monospace;
 }
 
- #Wrapper{
-background-color: rgba(0, 0, 0, 0.75);
-width: 100%;
-height: 100%;
+#Wrapper {
+  background-color: rgba(0,0,0,.75);
+  width: 100vw;
+  height: 100vh;
 }
